--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
     </div>
 
-    <!-- Background and Whisper Sound -->
+    <!-- Background Music & Sound Effects -->
     <audio id="bg-music" src="assets/bg-music.mp3" loop></audio>
     <audio id="whispers" src="assets/whispers.mp3" loop></audio>
 
